--- a/citypicker/build.gradle
+++ b/citypicker/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
 
+group='com.github.liujunhongz'
 android {
     compileSdkVersion 27
 
@@ -7,7 +9,6 @@ android {
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
